--- a/package.json
+++ b/package.json
@@ -46,8 +46,6 @@
         ]
     },
     "devDependencies": {
-        "autoprefixer": "^9.8.6",
-        "gh-pages": "^3.2.0",
-        "postcss": "^7.0.35"
+        "gh-pages": "^3.2.0"
     }
 }
